<?xml version="1.0"?>
<package format="2">
  <name>odometry_setup</name>
  <version>0.0.0</version>
  <description>The seapath_gnss_ros_driver package</description>
  
  <maintainer email="detoxte@gmail.com">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
