<?xml version="1.0"?>
<package format="2">
  <name>seapath_ned_to_enu_converter</name>
  <version>0.0.0</version>
  <description>The seapath_ned_to_enu_converter package</description>

  <maintainer email="detoxte@gmail.com">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
