<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seapath_ros_driver</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="jorgen.fjermedal@hotmail.com">Jorgen Fjermedal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend> 
  <depend>std_msgs</depend> 
  <depend>sensor_msgs</depend> 
  <depend>nav_msgs</depend> 
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>diagnostic_msgs</depend> 
  <depend>vortex_msgs</depend> 
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
